--- a/app/assets/styles/state/_animations.css
+++ b/app/assets/styles/state/_animations.css
@@ -1,5 +1,6 @@
 .progress-bar {
-  display: block;
+  display: none;
+  /* display: block;*/
   position: relative;
   width: 100%;
   margin: 0;
